# SkillBuilder

./: .gitignore  CMakeLists.txt  README.md  SkillBuilder_en_US.ts  build.bat  build.py  build.sh  build_config.sh  build_qvl.sh  construct_resources_qrc.sh  deliver_qvl.sh  deliver_resources.sh  deploy.bat  deploy.py  deps_config.sh  deps_scenario.sh  external_config.sh  main.cpp  main.qml  pull.sh  pull_dir.sh  run.bat  run.py
UI/: BodyBlock.qml  Cell.qml  CellAddSubMenu.qml  ChooseFileDialog.qml  CustomMenuItem.qml  DialogBottomRow.qml  DialogMessage.qml  DialogRemoveSkillWarning.qml  DialogTemplate.qml  EmptyCellMenu.qml  Field.qml  FileInputRow.qml  FilledCellMenu.qml  ImageRow.qml  InteractiveListElement.qml  InteractiveListView.qml  LineInputRow.qml  MainBlock.qml  ModelPropertyFormattedText.qml  ModelPropertyFormattedTextWithHint.qml  NewSkillOnFieldMenuItem.qml  Screen01.ui.qml  Skill.qml  SkillBuilderUI.qml  SkillBuilderUI.qmlproject  SkillBuilderUI.qmlproject.qtds  SkillBuilderUI.qrc  SkillCreationDialog.qml  SkillEditDialog.qml  SkillInLibrary.qml  SkillInfoDialog.qml  SkillLibrary.qml  TextInputRow.qml  TextLineRow.qml  TextRow.qml  compactPlacingStrategy.js  designer-database.json  logic.js
UI/imports/SkillBuilderUI/: Constants.qml  DirectoryFontLoader.qml  EventListModel.qml  EventListSimulator.qml
UI/imports/SkillBuilderUI/designer/: plugin.metainfo
UI/resources/: database.json  resources.qrc
include/: AppObject.h
resources/: database.json  resources.qrc
src/: AppObject.cpp
